Add ability to remove profile picture
